--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 # cmake -G "Visual Studio 14 2015 Win64" ..
 
 
-cmake_minimum_required( VERSION 3.2 )
+cmake_minimum_required( VERSION 3.6 )
 set( CMAKE_CONFIGURATION_TYPES Release Debug )
 project( Rainflow )
 set( RFC_VERSION_MAJOR "0" )
@@ -37,14 +37,17 @@ else()
     message( FATAL_ERROR "MATLAB not found...nothing will be built." )
 endif()
 
-add_definitions( -DMATLAB_MEX_FILE )
-
 # set up matlab libraries
 include_directories( ${Matlab_INCLUDE_DIRS} )
 configure_file( ${CMAKE_SOURCE_DIR}/config.h.in ${CMAKE_SOURCE_DIR}/config.h )
 
 matlab_add_mex( NAME ${CMAKE_PROJECT_NAME} SRC rainflow.c OUTPUT_NAME rfc )
+target_compile_definitions( ${CMAKE_PROJECT_NAME} PRIVATE -DMATLAB_MEX_FILE )
 target_link_libraries( ${CMAKE_PROJECT_NAME} ${Matlab_LIBRARIES} )
+
+# Test application, start project for MSVC
+add_executable( rfc_test rainflow.c rfc_test.c )
+set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT rfc_test )
 
 # install to /bin and /share by default
 install( TARGETS ${CMAKE_PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION bin )
