--- a/config.h.in
+++ b/config.h.in
@@ -2,7 +2,8 @@
 #define OFF 0
 
 #ifndef RFC_VERSION_MAJOR
-  #define RFC_VERSION_MAJOR       "${RFC_VERSION_MAJOR}"
-  #define RFC_VERSION_MINOR       "${RFC_VERSION_MINOR}"
-  #define RFC_USE_INTEGRAL_COUNTS  ${RFC_USE_INTEGRAL_COUNTS}
+  #define RFC_VERSION_MAJOR         "${RFC_VERSION_MAJOR}"
+  #define RFC_VERSION_MINOR         "${RFC_VERSION_MINOR}"
+  #define RFC_USE_INTEGRAL_COUNTS    ${RFC_USE_INTEGRAL_COUNTS}
+  #define RFC_EXPORT_MEX             ${RFC_EXPORT_MEX}
 #endif /*RFC_VERSION_MAJOR*/
