--- a/coan-args-minimal.in
+++ b/coan-args-minimal.in
@@ -9,7 +9,8 @@
 -DRFC_AT_SUPPORT=0
 -DRFC_DEBUG_FLAGS=0
 -DRFC_USE_HYSTERESIS_FILTER=1
--DMATLAB_MEX_FILE=1
+-DMATLAB_MEX_FILE=0
+-U_DEBUG
 -xd
 rainflow.c 
 rainflow.h
