--- a/src/lib/config.h.in
+++ b/src/lib/config.h.in
@@ -2,8 +2,8 @@
 #define OFF 0
 
 #ifndef RFC_VERSION_MAJOR
-  #define RFC_VERSION_MAJOR         "${RFC_VERSION_MAJOR}"
-  #define RFC_VERSION_MINOR         "${RFC_VERSION_MINOR}"
+  #define RFC_VERSION_MAJOR         "${PROJECT_VERSION_MAJOR}"
+  #define RFC_VERSION_MINOR         "${PROJECT_VERSION_MINOR}"
   #define RFC_USE_INTEGRAL_COUNTS    ${RFC_USE_INTEGRAL_COUNTS}
   #define RFC_USE_HYSTERESIS_FILTER  ${RFC_USE_HYSTERESIS_FILTER}
   #define RFC_MINIMAL                ${RFC_MINIMAL}
