--- a/src/matlab/CMakeLists.txt
+++ b/src/matlab/CMakeLists.txt
@@ -64,13 +64,14 @@ include( InstallRequiredSystemLibraries )
 set( CPACK_GENERATOR TGZ ZIP )
 set( CPACK_SOURCE_GENERATOR TGZ ZIP )
 set( CPACK_PACKAGE_DIRECTORY ${CMAKE_BINARY_DIR}/package )
+#set( CPACK_PACKAGE_NAME "rainflow")
 set( CPACK_PACKAGE_VERSION_MAJOR ${RFC_VERSION_MAJOR} )
 set( CPACK_PACKAGE_VERSION_MINOR ${RFC_VERSION_MINOR} )
 set( CPACK_PACKAGE_VERSION_PATCH "" )
 set( CPACK_PACKAGE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR} )
-set( CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md" )
+set( CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../../README.md" )
 set( CPACK_PACKAGE_DESCRIPTION_SUMMARY "Fast rainflow counting written in C (C99)" )
-set( CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" )
+set( CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/../../LICENSE" )
 set( CPACK_SOURCE_IGNORE_FILES 
      # Files specific to version control.
      "/\\\\.git/"
