--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,6 +2,6 @@
 requires = [
     "setuptools>=42",
     "wheel",
-    "numpy>=1.19.5"
+    "numpy==1.24.2"
 ]
 build-backend = "setuptools.build_meta"
